--- a/DbProject/DbProject.csproj
+++ b/DbProject/DbProject.csproj
@@ -186,14 +186,15 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202408081827036_MigTwo.cs" />
-    <Compile Include="Migrations\202408081827036_MigTwo.Designer.cs">
-      <DependentUpon>202408081827036_MigTwo.cs</DependentUpon>
+    <Compile Include="Migrations\202408272011119_CustomPerson.cs" />
+    <Compile Include="Migrations\202408272011119_CustomPerson.Designer.cs">
+      <DependentUpon>202408272011119_CustomPerson.cs</DependentUpon>
     </Compile>
-    <Compile Include="Models\AdventureWorks2022Context.cs" />
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Models\AdventureWorks2022Context.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\BusinessEntity.cs" />
+    <Compile Include="Models\CustomPerson.cs" />
     <Compile Include="Models\EmailAddressModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
@@ -314,8 +315,8 @@
     <Content Include="Scripts\jquery-3.7.0.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202408081827036_MigTwo.resx">
-      <DependentUpon>202408081827036_MigTwo.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202408272011119_CustomPerson.resx">
+      <DependentUpon>202408272011119_CustomPerson.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
